fix blog image shift issue

--- a/styles/_blog.less
+++ b/styles/_blog.less
@@ -241,6 +241,7 @@ body:not(.button-style-default) .sqs-editable-button, body:not(.button-style-def
 
   .entry {
     display: flex;
+    justify-content: space-between;
   }
 
   .thumbnail-title-wrapper {
